<resources>
    <string name="app_name">Lepton</string>
    <string name="edit_message">command</string>
    <string name="button_send">Send</string>
    <string name="client_name">lepton_b10</string>
    <string name="copyright">Copyright 2020 Paul Mackinney\nLepton Image Tatyana Ryevzina https://www.instagram.com/teabugart</string>
    <string name="backgammon_board"> </string>
    <string name="button_show">Board</string>
    <string name="button_hide">Console</string>
    <string name="button_join">Join</string>
    <string name="button_invite">Invite</string>
    <string name="button_resign">Resign</string>
    <string name="button_autoroll">Auto-Roll</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_user_name">User Name</string>
    <string name="button_user_name_hint">enter username</string>
    <string name="button_password">Password</string>
    <string name="button_password_hint">enter password</string>
    <string name="opponent"> </string>
    <string name="game_length">5</string>
    <string name="username_text">username</string>
    <string name="prompt_password_text">password</string>
    <string name="invite_title">Start new match</string>
    <string name="join_title">Accept invitaiton</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_connect">Connect</string>
    <string name="fibs_cmd_double">toggle double</string>
    <string name="fibs_cmd_roll">roll</string>
    <string name="toggle_log">toggle log</string>
</resources>
