<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/promptUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_user_name" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/username_text" />

    <TextView
        android:id="@+id/promptPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password_text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textUri|textVisiblePassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="password text" />

</LinearLayout>
