<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.mackinney.lepton.MainActivity">

    <!-- An interface to send commands to the server -->
    <EditText
        android:id="@+id/commandText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toStartOf="@+id/send"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- partner to commandText view -->
    <Button
        android:id="@+id/send"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="sendCommand"
        android:text="@string/button_send"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/showHide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/commandText"
        app:layout_constraintTop_toTopOf="parent" />

    <!--         android:lines="3"-->

    <!-- <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/backgammon_board"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/backgammon1" /> -->

    <!-- net/mackinney.lepton.BoardView -->
    <TextView
        android:id="@+id/console"
        style="@style/ConsoleStyle"
        android:layout_width="wrap_content"
        android:layout_height="620dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="0dp"
        android:fadeScrollbars="true"
        android:fadingEdge="vertical"
        android:fontFamily="@font/inconsolata"
        android:gravity="bottom"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:text=""
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:typeface="monospace"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/showHide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/boardView"
        app:layout_constraintTop_toBottomOf="@+id/commandText"
        app:layout_constraintVertical_bias="0.1" />

    <net.mackinney.lepton.BoardView
        android:id="@+id/boardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/backgammon_board"
        android:elevation="7dp"
        android:padding="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commandText"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backgammon" />

    <Button
        android:id="@+id/showHide"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showHideBoardView"
        android:text="@string/button_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/join"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="join"
        android:text="@string/button_join"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogout" />

    <Button
        android:id="@+id/invite"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="invite"
        android:text="@string/button_invite"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join" />

    <Button
        android:id="@+id/resign"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="resign"
        android:text="@string/button_resign"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invite" />

    <Button
        android:id="@+id/autoroll"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="toggleAutoroll"
        android:visibility="gone"
        android:text="@string/button_autoroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resign" />

    <Button
        android:id="@+id/loginLogout"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="loginLogout"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showHide" />
</androidx.constraintlayout.widget.ConstraintLayout>